src/test/ui/coherence-overlap-issue-23516-inherent.stderr
error[E0592]: duplicate definitions with name `dummy`
  --> $DIR/coherence-overlap-issue-23516-inherent.rs:19:25
   |
19 | impl<T:Sugar> Cake<T> { fn dummy(&self) { } }
   |                         ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `dummy`
20 | //~^ ERROR E0592
21 | impl<U:Sugar> Cake<Box<U>> { fn dummy(&self) { } }
   |                              ------------------- other definition for `dummy`
   |
   = note: downstream crates may implement trait `Sugar` for type `std::boxed::Box<_>`

error: aborting due to previous error

